# mutate

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
mutate/: __init__.py  infer.py
mutate/parsers/: text_classification.py
mutate/pipelines/: text_classification.py
mutate/prompt_datasets/: templates.py  text_classification.py
mutate_nlp/: __init__.py
mutate_nlp/parsers/: parser.py  text_classification.py
mutate_nlp/pipelines/: text_classification.py
mutate_nlp/prompt_datasets/: text_classification.py  utils.py
